<resources>
    <string name="appName">阳光医线</string>
    <string name="title_home">首页</string>
    <string name="title_contract">联系人</string>
    <string name="title_my">我的</string>

    <string name="no_network_connection">无网络连接</string>

    <string name="login">账号登录</string>
    <string name="register">去注册</string>
    <string name="inputMobile">请输入手机号</string>
    <string name="inputPsd">请输入密码</string>
    <string name="forgetPsd">忘记密码</string>
    <string name="verificationCodeLogin">验证码登录</string>
    <string name="mobile_or_password_can_not_be_empty">手机号或者密码不能空</string>
    <string name="mobile_can_not_be_empty">手机号不能空</string>
    <string name="authcode_can_not_be_empty">验证码不能空</string>
    <string name="password_can_not_be_empty">密码不能空</string>
    <string name="mobile_error">手机号码格式错误</string>
    <string name="auth_code">请输入验证码</string>
    <string name="send_auth_code">发送验证码</string>
    <string name="register_agree">点击注册即同意</string>
    <string name="terms_use"> (使用条款及隐私政策) </string>
    <string name="authCodeSended">验证码已发送</string>
    <string name="authCodeHint">s后重发</string>
    <string name="modifyPsd">修改密码</string>
    <string name="announcement">公告</string>

    <string name="patient_manage">患者管理</string>
    <string name="patient_search">请输入姓名或患者诊断</string>
    <string name="patient_search_hint">在患者端关注过您的患者，可以在这里显示哦。\n在这里，您可以看到完整的患者病历记录。</string>
    <string name="clinical_manage">试验管理</string>
    <string name="panel">专家组</string>
    <string name="panel_manage">专家组管理</string>
    <string name="added_panel">我加入的专家组</string>
    <string name="interesting_panel">您可能感兴趣的专家组</string>
    <string name="create_panel">创建专家组</string>
    <string name="panel_details">专家组详情</string>
    <string name="apply_add_panel">申请加入</string>
    <string name="panel_name">专家组名称</string>
    <string name="disease_select">病种选择</string>
    <string name="contract_select">选择联系人</string>
    <string name="please_select_contract">请先选择联系人</string>
    <string name="join">  加入</string>
    <string name="birth_place">出生地:</string>


    <string name="consult_online">在线咨询</string>
    <string name="tel_online">电话质询</string>
    <string name="clinical_trial">临床试验招募</string>
    <string name="recruitment_num">招募人数：</string>
    <string name="recruitment_number">招募人数</string>
    <string name="trial_stage">试验阶段：</string>
    <string name="adaptation_disease">适应症：</string>
    <string name="biding_unit">申办单位：</string>
    <string name="please_input_adaptation_disease">搜索适应症名称</string>
    <string name="trial_time">试验时间</string>
    <string name="trial_base_detail">基本信息</string>
    <string name="research_target">研究目的</string>
    <string name="doctor_rights">医生权益</string>
    <string name="apply">申请参与</string>
    <string name="applying">申请中</string>
    <string name="apply_success">申请成功</string>
    <string name="apply_fail">申请失败</string>
    <string name="doctor_rights_hint">查看本项目的医生权益，请先进行医生认证哟~</string>
    <string name="want_accept">我要参与</string>
    <string name="doctor_accept_hint">报名成为本项目的合作医生，请先进行医生认证哟~</string>
    <string name="doctor_registration_process">医生报名流程</string>
    <string name="patient_rights">患者获益</string>
    <string name="patient_rights_hint">成功参与本研究后，参与的患者可以获得以下权益</string>
    <string name="inclusion_criteria">入选标准</string>
    <string name="exclusion_criteria">排除标准</string>
    <string name="trial_detail">试验详细</string>
    <string name="trial_num">试验编号</string>
    <string name="trial_start_end_time">试验开始结束时间</string>
    <string name="sponsor_information">申办者信息</string>
    <string name="sponsor_name">申办者名称</string>
    <string name="trial_fund_origin">试验项目经费来源</string>
    <string name="company_introduce">机构介绍</string>
    <string name="trial_project_name">项目名称</string>
    <string name="trial_status">状态</string>
    <string name="contract_way">联系方式</string>
    <string name="project_consult">项目咨询</string>
    <string name="consult_tel">400&#8211;623&#8211;125</string>
    <string name="consult_hint">如果您有临床试验相关方面的问题，请联系我们～</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="process_one">注册或登录阳光医线</string>
    <string name="process_two">开始进行医生认证</string>
    <string name="process_three">查看项目权益</string>
    <string name="process_four">医生报名</string>


    <string name="new_contract">新的好友</string>
    <string name="contract_list">好友列表</string>
    <string name="add_phone">手机号添加</string>
    <string name="scan">扫一扫</string>
    <string name="qr_code">二维码</string>
    <string name="accept">接受</string>
    <string name="add_contract">添加好友</string>
    <string name="agree">同意</string>
    <string name="please_input_phone_num">请输入手机号</string>


    <string name="authentication">认证</string>
    <string name="to_certify">去认证</string>
    <string name="certify_suc">认证成功</string>
    <string name="certify_fail">认证失败</string>
    <string name="certify_ing">认证中</string>
    <string name="my_page">我的主页</string>
    <string name="personal_page">个人主页</string>
    <string name="feedback">意见反馈</string>
    <string name="my_invitation_code">我的邀请码</string>
    <string name="setting">设置</string>
    <string name="modify_password">修改密码</string>
    <string name="message_set">消息设置</string>
    <string name="current_version">当前版本</string>
    <string name="log_out">退出登录</string>
    <string name="service_tel">客服电话  400&#8211;623&#8211;125</string>
    <string name="service_time">服务时间：周一至周五 9:00&#8211;18:00</string>
    <string name="outside_num">门诊次数</string>
    <string name="operation_num">手术次数</string>
    <string name="good_at">擅长：</string>
    <string name="addFriend">添加好友</string>
    <string name="add_friend_hint">您的申请已经发出&#8230;</string>
    <string name="auth_hint">认证通过后会看到更多内容哦~</string>
    <string name="auth_hint1">请您上传胸牌或执业证书，确保姓名、医院、职称清晰可见，上传的资料我们仅作为认证使用，第三方不可见</string>
    <string name="feed_back_hint">尊敬的用户：感谢您关注阳光医线，如果您有对阳光医线的意见或是建议，请您告诉我们，您的建议对我们至关重要 ^_^</string>
    <string name="feed_back_hint1">请输入您的宝贵建议&#8230;</string>
    <string name="feed_back_reply">在此输入您的回复</string>
    <string name="invitation_code">邀请码：</string>
    <string name="personal_info">个人资料</string>
    <string name="header_image">头像</string>
    <string name="person_name">姓名</string>
    <string name="sex">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="birth">出生日期</string>
    <string name="distract">地区</string>
    <string name="hospital">医院</string>
    <string name="department">科室</string>
    <string name="professional_title">职称</string>
    <string name="major">擅长</string>
    <string name="personal_introduce">个人简介</string>
    <string name="distract_select">地区选择</string>
    <string name="please_input_child_department_name">请输入二级科室名称</string>
    <string name="message_setting_hint">为避免影响您休息，晚10点后将不会收到消息推送~</string>
    <string name="new_mes_push">最新咨询推送</string>
    <string name="new_mes_push_hint">最新的会议、视频、指南等</string>
    <string name="person_mes_push">个人消息推送</string>
    <string name="person_mes_push_hint">好申请类消息</string>


    <string name="jump">跳过</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="more">更多</string>
    <string name="add">添加</string>
    <string name="delete">删除</string>
    <string name="submit">提交</string>
    <string name="mes">消息</string>
    <string name="all">全部</string>
    <string name="complete">完成</string>
    <string name="invite">邀请</string>
    <string name="select">选取</string>
    <string name="clipping">剪裁</string>
    <string name="photograph">拍照</string>
    <string name="select_from_album">从相册选择</string>
    <string name="please_input_old_psd">请输入原密码</string>
    <string name="please_input_new_psd">请输入新密码</string>
    <string name="please_input_new_psd_one_more">请再次输入新密码</string>
    <string name="input_new_psd_not_fit">您输入的新密码不一致</string>
    <string name="modify_success_to_login">密码修改成功，请重新登录&#8230;</string>

    <string name="rationale_camera">This app needs access to your camera so you can take pictures.</string>


    <string name="exit_system">再按一次退出程序</string>
    <string name="empty"> </string>

    <string name="num">666</string>


    <string name="clinic_trial">临床试验</string>
    <string name="search">查询关键字:糖尿病</string>
    <string name="button">Search</string>
    <string name="hot">热门搜索:</string>
    <string name="bin">糖尿病</string>
    <string name="yuan">原发性高血压</string>
    <string name="qian">前列腺癌</string>
    <string name="project">项目名称</string>


    <string name="clinical_hint">在这里，您看到您所参加的项目的进度</string>
    <string name="message">为确保信息的时效性以下信息每天更新</string>
    <string name="testingmanagement">试验管理</string>
    <string name="telephonecounseling">电话咨询</string>
    <string name="patientcounseling">患者咨询</string>
    <string name="testingtime">试验时间:</string>
    <string name="recruit">招募人数:</string>
    <string name="man">人</string>
    <string name="adaptationdisease">适应症 :</string>
    <string name="projectsponsor">项目主办方:</string>
    <string name="projectorganizer">项目承办方:</string>
    <string name="projectpi">项目PI:</string>
    <string name="projectphase">项目阶段:</string>
    <string name="projectlocation">项目地点</string>
    <string name="researcher">研究者</string>
    <string name="plan">计划受试者人数</string>
    <string name="thegroupnumber">目前已入组人数</string>
    <string name="thegrouprate">入组率</string>
    <string name="state">状态</string>
    <string name="isstart">是否启动</string>
    <string name="earlyexit">提前退出人数</string>
    <string name="total">总计</string>

    <string name="bindingUnit">申办单位:</string>
    <string name="testingstage">试验阶段:</string>
    <string name="purposeofresearch">研究目的</string>
    <string name="particulars">详情</string>
    <string name="ygxq">  阳光欣晴</string>
    <string name="testingmanger">试验管理</string>
    <string name="examine">查看</string>

    <string name="patientswithdetails">患者详情</string>
    <string name="patientrecord">患者档案</string>
    <string name="patientname">山口百惠</string>
    <string name="huan_name">患者病历</string>
    <string name="diseasedescription">病情描述</string>
    <string name="uploadthemedicalrecords">上传病历图片</string>
    <string name="telephonebooking">电话咨询预约时间</string>
    <string name="warm">温馨提示:</string>
    <string name="prompt">到达指定时间后,平台客服会与您和患者进行连线,请安排好自己的时间,  谢谢。</string>
    <string name="patientrecords">患者病历</string>


    <string name="clinictime">就诊时间</string>
    <string name="complaint">主诉</string>
    <string name="finaldiagnosis">最后诊断</string>
    <string name="treatmentprocess">治疗经过</string>
    <string name="therapeuticregimen">用药方案</string>
    <string name="organizingtime">  (整理时间)</string>

    <string name="epidemic">是否有瘟疫区、疫情、疫区居住史</string>
    <string name="epidemicarea">是否有牧区、矿山、高沸去、低碘区居住史</string>
    <string name="poison">是否有化学性物质、放射物、毒物接触史</string>
    <string name="smokinghistory">吸烟史</string>
    <string name="drinking">饮酒史</string>
    <string name="obstericalhistory">婚育史</string>
    <string name="familyhistory">家族史</string>

    <string name="name">姓名:  </string>
    <string name="address">常住地:  </string>
    <string name="age">年龄:  </string>
    <string name="nation">民族:  </string>

</resources>
