<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    >

    <RelativeLayout
        android:id="@+id/r1"
        android:background="#00669A"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/dp_14"
        >
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/projectlocation"
                android:layout_width="25dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_2"
                />
            <View
                android:background="@color/orangee"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/dp_4"/>
            <TextView
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/researcher"
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <View
                android:background="@color/orangee"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/plan"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <View
                android:background="@color/orangee"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="@color/white"
                android:gravity="center"
                android:text="@string/thegroupnumber"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <View
                android:background="@color/orangee"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/thegrouprate"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <View
                android:background="@color/orangee"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/state"
                android:layout_weight="1.5"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <View
                android:background="@color/orangee"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/isstart"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
            <View
                android:background="@color/orangee"
                android:layout_width="0.5dp"
                android:layout_height="match_parent"/>
            <TextView
                android:textColor="#fff"
                android:gravity="center"
                android:text="@string/earlyexit"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

        </LinearLayout>
    </RelativeLayout>

</LinearLayout>